appId: com.example.routecraft_app
---
- launchApp:
    clearState: true
- clearKeychain
- tapOn: "Email"
- eraseText
- inputText: "joao.teste@teste.com"
- tapOn: "Password"
- eraseText
- inputText: "senha123"
- tapOn: "LOGIN"
- assertVisible: "My Travels"
- tapOn: "Create a Route"
- takeScreenshot: create_route_screen
